feat: add global exception handler
